PyMaker/datas/object2/RawHTML/i14501/Python_DOC_referPages.python-getting-syntax-error-while-using-argument-of-an-exception.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/5119751/in-python-whats-the-difference-between-except-exception-as-e-and-except-exc">In Python, what's the difference between 'except Exception as e' and 'except Exception, e' [duplicate]</a>
<span class="question-originals-answer-count">
                    3 answers
                </span>
</li>
</ul>
</div>
<p>I want to use <strong>Argument of an Exception</strong> to show additional information while an error occur in my code.
Here is my code.</p>
<p><strong>ArgumentOfAnException.py</strong> </p>
<pre><code>from pip._vendor.distlib.compat import raw_input

def to_celsius(f):
    try:
        c = (f-32)*5/9;
        return c;
    except ValueError, Argument:
        print("The argumet doesn't contain number\n", Argument);
        return;

f = raw_input("Enter temperature in *F : ");
print("Temperature in Celsius : ", to_celsius(float(f)));
print("Thank you...");
</code></pre>
<p>Here I use <strong><em>Argument</em></strong> variable to display additional information when error occur in my code but after running the program there will show a <strong><em>syntax error</em></strong> in the console output and the error is like</p>
<pre><code>File "F:\Document\Files\Coding\Java Eclipse\Python Project\First Project\src\Error\ArgumentOfAnException.py", line 7
    except ValueError, Argument:
                     ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>It seems like you're using python 3.x.</p>
<p>Use following syntax (using <code>as</code>):</p>
<pre><code>except ValueError as Argument:
</code></pre>
<p>Reference: <a href="https://docs.python.org/3/reference/compound_stmts.html#the-try-statement" rel="nofollow"><code>try</code> statement - Python 3 documentation</a></p>
</div>
<span class="comment-copy">Yes I use python 3.4.3</span>
